# ComfyUI_PerformanceLab

./: .gitignore  COMFYUI_MANAGER_SUBMISSION.md  README.md  TEST_REPORT.md  V2.1_FEATURES.md  __init__.py  batch_processor.py  comfy_nodes.py  connection_pool.py  discovery.py  distributed_optimizer.py  gpu_benchmarks.py  install.py  litellm_config.py  llm_enhancer.py  logging_config.py  lora_optimizer.py  memory.py  memory_system.py  mod_manager.py  model_tuner.py  performance_lab.py  performance_lab_backup.py  pyproject.toml  pytest.ini  requirements.txt  services_config.py  whimweaver_integration.py  workflow_utils.py
custom_nodes/ComfyUI_NetworkServices/: __init__.py  requirements.txt
custom_nodes/ComfyUI_NetworkServices/nodes/: __init__.py  health_check.py  kobold_llm.py  network_api.py  remote_comfyui.py
examples/: README.md  getting_started.json  performance_lab_master.json  performance_lab_v0.9_legacy.json  performance_lab_v2.json  test_workflow_runner.json
mods/: bypass_upscalers.py  mute_group.py  reduce_steps.py  unwrap_list.py  vram_optimizer.py
tests/: __init__.py  conftest.py  test_distributed_optimizer.py  test_network_nodes.py  test_workflow_utils.py
