[project]
name = "comfyui-performance-lab"
version = "0.9.0"
description = "Make any ComfyUI workflow faster, use less VRAM, or produce better quality - with AI assistance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Laboratoire Sonore"}
]
keywords = [
    "comfyui",
    "performance",
    "optimization",
    "vram",
    "speed",
    "workflow",
    "ai",
    "stable-diffusion",
    "custom-nodes"
]

# No external dependencies - uses only Python standard library
dependencies = []

[project.urls]
Homepage = "https://github.com/laboratoiresonore/ComfyUI_PerformanceLab"
Repository = "https://github.com/laboratoiresonore/ComfyUI_PerformanceLab"
Issues = "https://github.com/laboratoiresonore/ComfyUI_PerformanceLab/issues"

[tool.comfyui]
PublisherId = "laboratoiresonore"
DisplayName = "Performance Lab"
